--- a/assets/package.json
+++ b/assets/package.json
@@ -13,6 +13,7 @@
     "popper.js": "^1.14.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "reactstrap": "^5.0.0",
     "underscore": "^1.8.3"
   },
